--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ frontend/main
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+main
 .idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
