Initial worker skeleton

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update -y
 # basic utils
 
 RUN apt-get install binutils apt-utils python python-pip git -y
-RUN apt-get install wget gnupg2 -y
+RUN apt-get install sudo wget gnupg2 -y
 
 # server dependencies
 
@@ -14,9 +14,10 @@ RUN pip install pika
 
 # binwalk
 
-RUN apt-get install python-lzma
 RUN git clone https://github.com/ReFirmLabs/binwalk
-RUN cd binwalk && python setup.py install
+RUN find ./binwalk -type f | xargs sed -i  's/cramfsprogs //g'
+RUN (cd binwalk && echo "y" | ./deps.sh)
+RUN (cd binwalk && python setup.py install)
 
 ## ADD ADDITIONAL UTILITIES HERE ##
 
@@ -25,10 +26,16 @@ RUN cd binwalk && python setup.py install
 RUN useradd worker
 RUN mkdir /home/worker
 WORKDIR /home/worker
+RUN chown worker /home/worker
+USER worker
 
 COPY analysis .
 COPY server.py .
 
 # run server
+
+# test
+
+# COPY firmware.bin .
 
 CMD ["python2", "./server.py"]
